feat: add functionality for deleting an institute and replacing department references
