# back/src/main/kotlin/org/sejapoe/videomanager/controller/InstituteController.kt
@@ -3,7 +3,10 @@ package org.sejapoe.videomanager.controller
 import jakarta.validation.Valid
 import org.sejapoe.videomanager.dto.institute.CreateInstituteReq
 import org.sejapoe.videomanager.dto.institute.CreateInstitutesWithDepartmentsReq
+import org.sejapoe.videomanager.dto.institute.DeleteInstituteReq
+import org.sejapoe.videomanager.exception.InstituteDeletionCascadeException
 import org.sejapoe.videomanager.mapper.InstituteMapper
+import org.sejapoe.videomanager.mapper.RequestMapper
 import org.sejapoe.videomanager.security.annotations.IsAdmin
 import org.sejapoe.videomanager.security.annotations.IsUser
 import org.sejapoe.videomanager.service.InstituteService
@@ -13,7 +16,7 @@ import org.springframework.web.bind.annotation.*
 @RequestMapping("/api/institutes")
 class InstituteController(
     private val instituteService: InstituteService,
-    private val instituteMapper: InstituteMapper,
+    private val instituteMapper: InstituteMapper, private val requestMapper: RequestMapper,
 ) {
     @IsUser
     @GetMapping
@@ -30,4 +33,15 @@ class InstituteController(
     @PostMapping("/with_departments")
     fun createInstitutes(@RequestBody @Valid createInstitutesReq: CreateInstitutesWithDepartmentsReq) =
         instituteService.create(createInstitutesReq.institutes).map(instituteMapper::toInstituteWithDepartmentsRes)
+
+    @IsAdmin
+    @DeleteMapping()
+    fun deleteInstitute(@RequestBody @Valid deleteInstituteReq: DeleteInstituteReq) =
+        instituteService.delete(deleteInstituteReq.id, deleteInstituteReq.departmentReplacement ?: mapOf())
+
+    @ExceptionHandler(InstituteDeletionCascadeException::class)
+    fun handleInstituteDeletionCascade(e: InstituteDeletionCascadeException) =
+        e.toProblemDetail().apply {
+            setProperty("departmentIds", e.departmentIds)
+        }
 }
