# back/src/main/kotlin/org/sejapoe/videomanager/dto/institute/DeleteInstituteReq.kt
@@ -1,0 +1,6 @@
+package org.sejapoe.videomanager.dto.institute
+
+data class DeleteInstituteReq(
+    val id: Long,
+    val departmentReplacement: Map<Long, Long>?
+)
